--- a/Nova pasta/2/style.css
+++ b/Nova pasta/2/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -15,7 +17,7 @@ main{
 
 .card-container{
     width: 30%;
-    height: 80%;
+    height: 90%;
     background-color: #6b83c2;
     border-radius: 20px;
     display: flex;
@@ -35,8 +37,10 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 80%;
+    height: 90%;
     width: 100%;
+    font-family: 'Raleway', sans-serif;
+    color: white;
 }
 
 .user-icon{
@@ -81,6 +85,14 @@ main{
     font-size: 15px;
 }
 
+label{
+    font-size: 20px;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px;
+}
+
 .user-pass::placeholder{
     color: white;
     font-size: larger;
@@ -121,9 +133,36 @@ main{
 
 .btn-login:hover {
   filter: brightness(90%);
+    box-shadow: 30px 30px 30px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 }
 
 .btn-send{
     width: 80%;
     text-align: center;
 }
+
+.seta{
+    width: 50px;
+    height: 50px;
+}
+
+input[type="date"]{
+    background-color: #1899D6;
+    padding: 15px;
+    top: 50%;
+    left: 50%;
+    font-family: "Roboto Mono",monospace;
+    color: #ffffff;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    border-radius: 15px;
+}
+::-webkit-calendar-picker-indicator{
+    background-color: #ffffff;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
