--- a/Nova pasta/2/style2.css
+++ b/Nova pasta/2/style2.css
@@ -1,28 +1,133 @@
-body{
-    animation: animate 5s linear infinite;
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
 
-.duck-dance{
-    width: 40%;
-    height: 250px;
+*{
+    box-sizing: border-box;
+    padding: 0;
 }
 
 main{
-    width: 100%;
-    height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #6667AB;
+    border-radius: 20px;
 }
 
-@keyframes animate {
-    0% {
-        background-color: blue;
-    }
-    50% {
-        background-color: red;
-    }
-    100% {
-        background-color: green;
-    }
+.card-container{
+    width: 30%;
+    height: 80%;
+    background-color: #6b83c2;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.card-container:hover{
+    box-shadow: 30px 30px 30px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
+}
+
+.card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 80%;
+    width: 100%;
+    font-family: 'Raleway', sans-serif;
+    color: white;
+}
+
+.user-icon{
+    width: 75px;
+    height: 75px;
+    
+}
+
+
+.user-login{
+    background: transparent;
+    color: white;
+    border-color: white;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    outline: 0;
+    border-bottom: 2px solid #white;
+    width: 60%;
+    font-size: 15px;
+}
+
+.user-login::placeholder{
+    color: white;
+    font-size: larger;
+    opacity: 70%;
+    padding: 5px;
+}
+
+.user-pass{
+    color: white;
+    background: transparent;
+    color: white;
+    border-color: white;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    outline: 0;
+    border-bottom: 2px solid #white;
+    width: 60%;
+    cursor: text;
+    font-size: 15px;
+}
+
+.user-pass::placeholder{
+    color: white;
+    font-size: larger;
+    opacity: 70%;
+    padding: 5px;
+}
+
+.btn-login {
+  appearance: button;
+  background-color: #1899D6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 40%;
+}
+
+.btn-login:hover {
+  filter: brightness(90%);
+}
+
+.btn-send{
+    width: 80%;
+    text-align: center;
 }
